--- a/style.css
+++ b/style.css
@@ -22,7 +22,7 @@ body {
 }
 
 .content_left {
-  background-image: url(./omid-armin-GIm5OV5rY0w-unsplash.jpg);
+  background-image: url(img/omid-armin-GIm5OV5rY0w-unsplash.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
@@ -67,7 +67,7 @@ body {
   font-weight: 500;
   margin-top: 20px;
 }
-.form {
+#form {
   display: flex;
   flex-flow: row wrap;
   gap: 20px;
@@ -77,6 +77,7 @@ body {
 }
 
 .input input {
+  color: var(--text);
   background-color: #000000;
   border: 1px solid #757575;
   margin-top: 10px;
@@ -87,11 +88,11 @@ body {
   border: 1px solid #62ec83;
 }
 
-.input input[type="email"]:invalid {
+/* .input input[type="email"]:invalid {
   outline: none;
-  border: 1px solid #d55c5f;
-  color: #d55c5f;
-}
+  border: 1px solid red;
+  color: red;
+} */
 .input {
   display: flex;
   flex-flow: column wrap;
@@ -99,7 +100,12 @@ body {
   font-size: 12px;
 }
 
-.submit_btn {
+#message {
+  color: red;
+  font-size: 13px;
+}
+
+#submit_btn {
   font-size: 14px;
   font-weight: bold;
 
@@ -116,7 +122,7 @@ body {
   margin-top: 20px;
 }
 
-.submit_btn:hover {
+#submit_btn:hover {
   background: #008827;
 }
 
