--- a/style.css
+++ b/style.css
@@ -16,26 +16,29 @@ body {
 
 .content {
   display: flex;
+  flex-wrap: wrap;
   justify-content: center;
   width: 100vw;
   height: 100vh;
 }
 
 .content_left {
-  background-image: url(img/omid-armin-GIm5OV5rY0w-unsplash.jpg);
+  background-image: url(/img/omid-armin-GIm5OV5rY0w-unsplash.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   width: 35vw;
+  height: 100vh;
 }
 
 .logo {
   display: flex;
   flex-direction: row;
 
-  background-color: rgba(0, 0, 0, 0.3);
+  background-color: rgba(0, 0, 0, 0.5);
   position: relative;
   top: 20vh;
+
   gap: 1vw;
   padding: 15px 0;
 
@@ -48,13 +51,10 @@ body {
 }
 
 .content_right {
-  border: 1px solid #757575;
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-left: 15px;
-  padding: 0 40px;
-  max-width: 800px;
+  padding: 0px 40px;
 }
 
 .top_text p:nth-child(4) {
@@ -68,12 +68,35 @@ body {
   margin-top: 20px;
 }
 #form {
-  display: flex;
-  flex-flow: row wrap;
   gap: 20px;
   padding-top: 20px;
   padding-bottom: 20px;
   opacity: 90%;
+  font-size: 12px;
+  display: grid;
+  grid-template-areas:
+    "one two"
+    "three four"
+    "five six";
+}
+
+#form div:nth-child(1) {
+  grid-area: one;
+}
+#form div:nth-child(2) {
+  grid-area: two;
+}
+#form div:nth-child(3) {
+  grid-area: three;
+}
+#form div:nth-child(4) {
+  grid-area: four;
+}
+#form div:nth-child(5) {
+  grid-area: five;
+}
+#form div:nth-child(6) {
+  grid-area: six;
 }
 
 .input input {
@@ -82,18 +105,13 @@ body {
   border: 1px solid #757575;
   margin-top: 10px;
   height: 1.7rem;
+  display: block;
+  width: 100%;
 }
 
 .input input:focus {
   outline: none;
   border: 1px solid #62ec83;
-}
-
-.input {
-  display: flex;
-  flex-flow: column wrap;
-  width: 40%;
-  font-size: 12px;
 }
 
 #message {
@@ -115,7 +133,7 @@ body {
   cursor: pointer;
 
   width: 10rem;
-  margin-top: 20px;
+  margin-top: 15px;
 }
 
 #submit_btn:hover {
@@ -133,5 +151,72 @@ a:hover {
 
 .bottom_text {
   margin-top: 20px;
+  margin-bottom: 15px;
   font-size: 14px;
+}
+
+@media (max-width: 768px) {
+  .content_left {
+    width: 100vw;
+    height: 25vh;
+  }
+  .logo {
+    top: 5vh;
+  }
+  .content_right {
+    margin-top: 25px;
+    padding-top: 30px;
+  }
+  #form {
+    padding: 15px 0px;
+    display: grid;
+    grid-template-areas:
+      "one"
+      "two"
+      "three"
+      "four"
+      "five"
+      "six";
+  }
+  .message,
+  .btn_div,
+  .txt_div {
+    display: flex;
+    justify-content: center;
+  }
+}
+
+@media (max-width: 1024px) {
+  .content_left {
+    width: 100vw;
+    height: 35vh;
+  }
+  .logo {
+    top: 7vh;
+  }
+
+  .content_right {
+    padding-top: 0px;
+  }
+
+  .form_title {
+    margin-top: 50px;
+  }
+  #form {
+    padding: 15px 0px;
+    display: grid;
+    grid-template-areas:
+      "one"
+      "two"
+      "three"
+      "four"
+      "five"
+      "six";
+  }
+  .message,
+  .btn_div,
+  .txt_div {
+    display: flex;
+    justify-content: center;
+  }
 }
