--- a/style.css
+++ b/style.css
@@ -14,6 +14,7 @@ body {
   color: var(--text);
   width: 100vw;
   height: 100vh;
+  padding: 100px;
 }
 
 .content {
@@ -27,9 +28,9 @@ body {
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  width: 35vw;
+  width: 30vw;
   height: 80vh;
-  margin: 100px 0px;
+
   transition: all 0.5s;
 }
 
@@ -188,7 +189,7 @@ a:hover {
   }
 }
 
-@media (max-width: 1100px) {
+@media (max-width: 1300px) {
   .content_left {
     width: 100vw;
     height: 35vh;
