--- a/style.css
+++ b/style.css
@@ -24,7 +24,7 @@ body {
 }
 
 .content_left {
-  background-image: url(/img/image1.jpg);
+  background-image: url(img/image1.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
