--- a/src/styles/styles.css
+++ b/src/styles/styles.css
@@ -11,7 +11,7 @@
 body {
   font-family: 'Raleway', sans-serif;
   background: #000000;
-  color: var(--text);
+  color: #fff;
   width: 100vw;
   height: 100vh;
   padding: 100px;
@@ -64,7 +64,7 @@ body {
   margin-top: 30px;
 }
 .form_title {
-  color: var(--color);
+  color: #1db954;
   width: 100%;
   font-size: 20px;
   font-weight: 500;
@@ -103,7 +103,7 @@ body {
 }
 
 .input input {
-  color: var(--text);
+  color: #fff;
   background-color: #000000;
   border: 1px solid #757575;
   margin-top: 10px;
@@ -127,7 +127,7 @@ body {
   font-weight: bold;
 
   color: #ffffff;
-  background-color: var(--color);
+  background-color: #1db954;
 
   border: none;
   border-radius: 3px;
@@ -145,7 +145,7 @@ body {
 
 a {
   text-decoration: none;
-  color: var(--color);
+  color: #1db954;
 }
 
 a:hover {
